Fix cut off dropdowns (#62)

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,7 @@ body {
   opacity: 0.5;
   cursor: block;
 }
+
+.mdl-list__item {
+  overflow: initial;
+}
